# alexa-teacher-models

./: .flake8  .gitignore  MODEL_LICENSE.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi.yml
alexa_teacher_models/: __init__.py  configuration_atm.py  modeling_atm.py  tokenization_atm.py
alexa_teacher_models/scripts/: finetune.py  generate_outputs.py  metrics.py  preproc.py  repl.py
alexa_teacher_models/scripts/deepspeed/: zero3-offload.json
docs/: EFA.md
scripts/: finetune.py  metrics.py  preproc.py  repl.py  train_utils.py
scripts/deepspeed/: zero2.json  zero3.json
test/: test_models.py  test_tokenizer.py
test-data/: fake-spm.model
