[metadata]
NAME = alexa_teacher_models 
version = 1.0.0 
description = Alexa Teacher Models
author = amazon-alexa 
author_email = ssoltan@amazon.com
url = https://www.github.com/https://github.com/alexa/alexa-teacher-models
license = Apache 2.0
keywords=
    deep-learning
    nlp
    pytorch
    llm

long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    LICENSE
    MODEL_LICENSE
    NOTICE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:

install_requires =
    numpy
    transformers
    sentencepiece>=0.1.95
    torch>=1.7
    protobuf<3.21.0

[options.extras_require]
repl:
    prompt_toolkit
ft:
    datasets
    evaluate
    deepspeed
    accelerate
    sacrebleu
    tensorboard

sum:
    nltk
    rouge_score>=0.1.2
test:
    pytest

